fix spacing

--- a/src/bp/ui-studio/src/web/components/Layout/StatusBar/BottomPanel.styl
+++ b/src/bp/ui-studio/src/web/components/Layout/StatusBar/BottomPanel.styl
@@ -75,6 +75,7 @@
     }
 
     .message {
+      white-space: pre-wrap;
       padding-left: 10px;
       opacity: 0.8;
       color: #888;
